# identity-bot

./: .gitignore  .replit  Identity Agent Specification, v1.5.txt  codemagic.yaml  package.json  pubspec.yaml  pyproject.toml  replit.md  roadmap.md  start.sh
app-store-ui/: app.js  index.html  style.css
attached_assets/: Pasted---1771540728435_1771540728435.txt  Pasted--5-Operational-Lifecycle-From-Audit-to-Enforcement-To-e_1771660793443.txt  Pasted--ADR-001-Core-Architecture-Language-Stack-Status-Accept_1771391128388.txt  Pasted--Building-arm64-v8a-aarch64-linux-android-Updating-crat_1771540684931.txt  Pasted--Cloning-repository-https-github-com-LF-Decentralized-T_1771537890466.txt  Pasted--Cloning-repository-https-github-com-LF-Decentralized-T_1771699856771.txt  Pasted--MASTER-BLUEPRINT-Consent-Driven-Cross-Platform-Go-Orch_1771660780861.txt  Pasted--Phase-1-Building-with-dev-skip-frb-for-FRB-codegen-ins_1771712103011.txt  Pasted--Phase-1-Building-with-dev-skip-frb-for-FRB-codegen-ins_1771713985664.txt  Pasted--Running-Gradle-task-assembleDebug-Warning-The-plugin-m_1771716495842.txt  Pasted--Stateless-KERI-Helper-Microservice-Documentation-This-_1771458004222.txt  Pasted--Updating-crates-io-index-Downloading-crates-Downloaded_1771537607491.txt  Pasted--Updating-crates-io-index-Downloading-crates-Downloaded_1771540711591.txt  Pasted--usr-bin-env-bash-source-HOME-cargo-env-cd-identity-age_1771713548378.txt  (+30 more)
calls/: README.md
identity_agent_ui/rust/: Cargo.toml
identity_agent_ui/rust/src/: lib.rs
identity_agent_ui/rust/src/api/: keri_bridge.rs  mod.rs
(+88 files in other folders)
