[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "blake3>=1.0.8",
    "cbor2>=5.8.0",
    "flask>=3.1.2",
    "keri>=1.1.17",
    "lmdb>=1.7.5",
    "msgpack>=1.1.2",
    "pysodium>=0.7.18",
    "simplejson>=3.20.2",
]
