[package]
name = "identity_agent_keri"
version = "0.1.0"
edition = "2021"
description = "KERI bridge for Identity Agent Flutter app"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
keri-core = "0.11"
cesrox = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.13"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
